--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.86"
+
+select = "0.6.0"
+
+reqwest = "0.12.5"
+tokio = { version = "1.38.1", features = ["full"] }
+
+serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.120"
+
+indicatif = "0.17.8"
